# cpp-init

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
cmake/: cache.cmake  compiler_warnings.cmake  misc.cmake  options.cmake  sanitizers.cmake  setup_pkg.cmake  static_analyzers.cmake
project_config/: CMakeLists.txt  config.hpp.in
src/: CMakeLists.txt  compile_commands.json  factorial.cpp  factorial.hpp  main.cpp
tests/: CMakeLists.txt  factorial_test.cpp
